# augmcp

./: Cargo.toml  README.md  README_CN.md
.github/workflows/: release.yml
src/: backend.rs  config.rs  http_router.rs  indexer.rs  lib.rs  main.rs  server.rs  service.rs  tasks.rs
tests/: backend_progress.rs  config_env.rs  http_e2e.rs  indexer_unit.rs  service_persist.rs
