[package]
name = "augmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8.5", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std"] }
axum = { version = "0.8", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
directories = "6"
home = "0.5"
toml = "0.9"
globset = "0.4"
ignore = "0.4"
sha2 = "0.10"
encoding_rs = "0.8"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
dunce = "1"
pathdiff = "0.2"
