[package]
name = "augmcp"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Latias94/augmcp"
readme = "README.md"

[dependencies]
rmcp = { version = "0.8.5", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std"] }
axum = { version = "0.8", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
directories = "6"
home = "0.5"
toml = "0.9"
globset = "0.4"
ignore = "0.4"
sha2 = "0.10"
encoding_rs = "0.8"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
dunce = "1"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
tower = "0.5"

[workspace.metadata.dist]
# 使用的 cargo-dist 版本（与工作流保持一致）
cargo-dist-version = "0.30.2"
# CI 平台
ci = "github"
# 生成一键安装脚本（可选）
installers = ["shell", "powershell"]
# 预编译目标（可按需增减）
targets = [
  "x86_64-unknown-linux-musl",
  "aarch64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
]
# 在 CI 环境允许忽略未提交改动（cargo-dist 需要读取计划）
allow-dirty = ["ci"]
